[gd_scene load_steps=19 format=3 uid="uid://b154tu0v55jsf"]

[ext_resource type="Script" path="res://Nodes/player.gd" id="1_i86dc"]
[ext_resource type="Texture2D" uid="uid://toib241jfr8d" path="res://Assets/Untitled_Artwork (15).png" id="2_ny4cl"]
[ext_resource type="AudioStream" uid="uid://baqhpu02ifxw5" path="res://Assets/Audio/SFX/376060__morganpurkis__mouth-gun.wav" id="3_le8vc"]
[ext_resource type="Texture2D" uid="uid://4vnouy1ps18" path="res://Assets/Axe.png" id="3_um3qq"]
[ext_resource type="AudioStream" uid="uid://cyjtln53lwaxi" path="res://Assets/Audio/SFX/405538__nebulasnails__pistol-cock.wav" id="4_tjmof"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0a2of"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xnxef"]
atlas = ExtResource("2_ny4cl")
region = Rect2(0, 0, 597, 1668)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdqea"]
atlas = ExtResource("2_ny4cl")
region = Rect2(597, 0, 597, 1668)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xhvt"]
atlas = ExtResource("2_ny4cl")
region = Rect2(1194, 0, 597, 1668)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmjxm"]
atlas = ExtResource("2_ny4cl")
region = Rect2(1791, 0, 597, 1668)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytilg"]
atlas = ExtResource("2_ny4cl")
region = Rect2(0, 0, 597, 1668)

[sub_resource type="SpriteFrames" id="SpriteFrames_00t2x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnxef")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdqea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xhvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmjxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytilg")
}],
"loop": false,
"name": &"Use",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lkfwl"]
atlas = ExtResource("3_um3qq")
region = Rect2(0, 0, 1194, 834)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytw3k"]
atlas = ExtResource("3_um3qq")
region = Rect2(1194, 0, 1194, 834)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ac1"]
atlas = ExtResource("3_um3qq")
region = Rect2(0, 834, 1194, 834)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew7t3"]
atlas = ExtResource("3_um3qq")
region = Rect2(1194, 834, 1194, 834)

[sub_resource type="AtlasTexture" id="AtlasTexture_8djdx"]
atlas = ExtResource("3_um3qq")
region = Rect2(0, 0, 1194, 834)

[sub_resource type="SpriteFrames" id="SpriteFrames_ta4cc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkfwl")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytw3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ac1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew7t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8djdx")
}],
"loop": false,
"name": &"Use",
"speed": 10.0
}]

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_i86dc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0a2of")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 3

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tool" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Gun" type="AnimatedSprite2D" parent="CanvasLayer/Tool"]
position = Vector2(88.4, 1.80005)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_00t2x")
animation = &"Use"

[node name="Axe" type="AnimatedSprite2D" parent="CanvasLayer/Tool"]
position = Vector2(90, -20)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_ta4cc")
animation = &"Idle"

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.545098)

[node name="ToolUse" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_le8vc")
bus = &"SFX"

[node name="Reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tjmof")
bus = &"SFX"

[connection signal="animation_finished" from="CanvasLayer/Tool/Gun" to="." method="_on_gun_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/Tool/Axe" to="." method="_on_axe_animation_finished"]
